03_base_resources/manifests/picture-of-the-day/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: skooner
  namespace: skooner
spec:
  ingressClassName: traefik
  rules:
    - host: pictures.local.nigelvanhattum.nl
      http:
        paths:
          - backend:
              service:
                name: picture-of-the-day
                port:
                  name: http
            path: /
            pathType: Prefix
